security/namespace-destiny.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: destiny
  labels:
    id: destiny
