security/namespace-origin.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: origin
  labels:
    id: origin
