security/network-policy-origin.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-origin
  namespace: origin
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          id: destiny
    - podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          id: destiny
    - podSelector: {}
